# cub3D

./: .gitignore  .gitmodules  .init  CMakeLists.txt  Makefile  README.md
hooks/: pre-commit
inc/: c3d.h  c3d_error.h  c3d_graphics.h  c3d_keys.h  c3d_listener.h  c3d_listner.h  c3d_map.h  c3d_player.h  c3d_ray_cast.h  cub3d.h  errors.h
lib/libft/: Makefile  Makefile.orig
lib/libft/inc/: ft_conv.h  ft_ctype.h  ft_err.h  ft_list.h  ft_math.h  ft_memutils.h  ft_norm.h  ft_sort.h  ft_stack.h  ft_stdio.h  ft_stdlib.h  ft_string.h  ft_tree.h
lib/libft/src/conv/: ft_itoa.c  ft_itoa_base.c  ft_ltoa.c  ft_ltoa_base.c  ft_uitoa.c  ft_uitoa_base.c  ft_ultoa.c  ft_ultoa_base.c
lib/libft/src/ctype/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_iscntrl.c  ft_isdigit.c  ft_isgraph.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_isxdigit.c  ft_tolower.c  ft_toupper.c
lib/libft/src/data_struct/list/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
lib/libft/src/data_struct/stack/: ft_stackdestroy.c  ft_stackdup.c  ft_stacknew.c  ft_stackpop.c  ft_stackprint.c  ft_stackpush.c  ft_stacksize.c
lib/libft/src/data_struct/tree/: ft_treeadd.c  ft_treeclear.c  ft_treenew.c
lib/libft/src/err/: add_err.c  exit_err.c  get_err.c  load_err.c  p_clear_err.c  p_get_err.c  print_err.c  set_err.c
lib/libft/src/math/: ft_isinrange.c  ft_pow.c
lib/libft/src/memutils/: ft_free_matrix.c
lib/libft/src/norm/: ft_set.c  ft_ternary.c
lib/libft/src/sort/: ft_quicksorti.c  ft_quicksortl.c
lib/libft/src/stdio/: ft_get_next_line.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c
lib/libft/src/stdlib/: ft_abs.c  ft_atoi.c  ft_calloc.c  ft_free.c  ft_malloc.c  ft_max.c  ft_min.c  ft_realloc.c  ft_swap.c
lib/libft/src/string/: ft_bzero.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_split.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strendw.c  ft_strichr.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnstr.c  ft_strpbrk.c  ft_strrchr.c  ft_strrev.c  ft_strsjoin.c  ft_strstartw.c  ft_strtok.c  ft_strtrim.c  ft_strwcnt.c  ft_substr.c
res/: err.txt
res/imgs/: Wall-000.xpm  Wall-001.xpm  Wall-002.xpm  Wall-003.xpm  not_walkable.xpm  player.xpm  walkable.xpm
res/maps/: cross.cub  cub1.cub  example_map1.cub  square.cub
src/: c3d.c  cub3d.c
src/asan/: asan.c
src/error/: error.c
src/graphics/: distance.c  minimap.c  ray_cast.c  ray_tracing.c  render.c  screen.c
src/listeners/: key_listener.c  listener.c  listner.c
src/map/: colors.c  header.c  map.c  map_checking.c  map_utils.c  textures.c  validity_checking.c
src/player/: player.c
